RESOLVED FIXED 248239
[WKTR] Fix warnings about duplicate NSString category methods
https://bugs.webkit.org/show_bug.cgi?id=248239
Summary [WKTR] Fix warnings about duplicate NSString category methods
David Kilzer (:ddkilzer)
Reported 2022-11-22 10:12:25 PST
Fix warnings about duplicate NSString category methods when linking WebKitTestRunner. Seen here: <https://ews-build.webkit.org/#/builders/77/builds/6585/steps/12/logs/warnings__112_> ``` ld: warning: method '-createJSStringRef' in category from /Volumes/Data/worker/iOS-16-Build-EWS/build/WebKitBuild/WebKitTestRunner.build/Release-iphoneos/WebKitTestRunnerInjectedBundle.build/Objects-normal/arm64/AccessibilityUIElementIOS.o conflicts with same method from another category ld: warning: method '+stringWithJSStringRef:' in category from /Volumes/Data/worker/iOS-16-Build-EWS/build/WebKitBuild/WebKitTestRunner.build/Release-iphoneos/WebKitTestRunnerInjectedBundle.build/Objects-normal/arm64/AccessibilityUIElementIOS.o conflicts with same method from another category ``` For this EWS build: <https://ews-build.webkit.org/#/builders/77/builds/6585>
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-22 10:12:42 PST
David Kilzer (:ddkilzer)
Comment 2 2022-11-22 10:49:25 PST
EWS
Comment 3 2022-11-22 15:39:15 PST
Committed 256958@main (d685f7a65d20): <https://commits.webkit.org/256958@main> Reviewed commits have been landed. Closing PR #6742 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.