[WKTR] Fix warnings about duplicate NSString category methods https://bugs.webkit.org/show_bug.cgi?id=248239 <rdar://102609414>

Reviewed by Darin Adler.

Remove duplciate methods from AccessibilityUIElementIOS.mm since
they already exist in AccessibilityCommonMac.mm.  Also take this
opportunity to rename AccessibilityCommonMac.{h,mm} to
AccessibilityCommonCocoa.{h,mm} and move them to the cocoa/
folder since they are used on both iOS and Mac platforms.

* Tools/WebKitTestRunner/InjectedBundle/cocoa/AccessibilityCommonCocoa.h: Rename from Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityCommonMac.h.
* Tools/WebKitTestRunner/InjectedBundle/cocoa/AccessibilityCommonCocoa.mm: Rename from Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityCommonMac.mm.

* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityControllerIOS.mm:
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(+[NSString stringWithJSStringRef:]): Delete.
(-[NSString createJSStringRef]): Delete.
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityControllerMac.mm:
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityNotificationHandler.mm:
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
- Update #import statements for AccessibilityCommonMac.h rename.

* Tools/WebKitTestRunner/PlatformMac.cmake:
* Tools/WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:
- Update project for header and source file renames.

Canonical link: https://commits.webkit.org/256958@main